--- a/service/kotlin-app-template.service
+++ b/service/kotlin-app-template.service
@@ -2,7 +2,7 @@
 Description=kotlin-app-template
 
 [Service]
-User=service-deployer
+User=deployer
 WorkingDirectory=/services/kotlin-app-template
 ExecStart=/services/kotlin-app-template/run
 SuccessExitStatus=143
