--- a/.github/workflows/initialise-template.yml
+++ b/.github/workflows/initialise-template.yml
@@ -3,16 +3,26 @@
 name: initialise-template
 
 on:
-  create:
+  push:
+    branches:
+      - main
 
 jobs:
+
   build:
+    if: github.event.head_commit.message == 'Initial commit'
 
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout current branch
         uses: actions/checkout@v2
+
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: |
+          echo "$GITHUB_CONTEXT"
 
       - name: Replace 'kotlin-app-template' with repo name
         run: |
@@ -24,9 +34,6 @@ jobs:
           sed -i 's/kotlin-app-template/${{ github.event.repository.name }}/' service/deploy.sh
           sed -i 's/kotlin-app-template/${{ github.event.repository.name }}/' service/kotlin-app-template.service
           mv service/kotlin-app-template.service service/${{ github.event.repository.name }}.service
-
-      - name: Remove this workflow
-        run: rm -f .github/workflows/initialise-template.yml
 
       - name: Commit template changes
         uses: stefanzweifel/git-auto-commit-action@v4
