--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,9 @@ on:
       - 'v[0-9]+.[0-9]+.[0-9]+'
 
 env:
+  GH_USER: lucystevens
   DOCKERHUB_USERNAME: lucystevens
+  PROJECT_NAME: brewery-api
 
 jobs:
   build:
@@ -32,7 +34,7 @@ jobs:
       - name: Build jar
         run: ./gradlew shadowJar
 
-      # Setup for docker build and push
+      # Docker build
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -53,15 +55,25 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          push: true # Don't push until certain it works
+          push: true
           tags: |
             ${{ env.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}:${{ env.PROJECT_VERSION }}
             ${{ env.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}:latest
           build-args: |
             PROJECT_NAME=${{ env.PROJECT_NAME }}
             PROJECT_VERSION=${{ env.PROJECT_VERSION }}
+            
 
-      # TODO add automatic release at some point
+      # deploy to server
+
+      - name: Deploy service
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: deployer
+          key: ${{ secrets.SSH_KEY }}
+          passphrase: ${{ secrets.SSH_PASSPHRASE }}
+          script: /services/docker-deploy.sh ${{ env.DOCKERHUB_USERNAME }}/${{ env.PROJECT_NAME }}:${{ env.PROJECT_VERSION }} -p 9002:8000
 
       # Create a release and upload the jar to it
 
